# flashcards-in-a-flash

./: .coverage  .gitignore  README.md  main.py  polish_italian_deck.apkg  pyproject.toml  style.css
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: run-tests.yml
flashcards_in_a_flash/: audio_generator.py  deck.py  input_parser.py  main.py
tests/: test_audio_generator.py  test_deck.py  test_input_parser.py
